# MADSpec

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  pyproject.toml  Лучшие практики AGENTS.md для разработчиков.md
.github/workflows/: release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh  generate-release-notes.sh
scripts/bash/: get-branch.sh
scripts/powershell/: get-branch.ps1
skills/generate-agents-md/: SKILL.md  template.md
skills/subagents_orchestrator/: SKILL.md
src/madspec_cli/: __init__.py
templates/: architecture-template.md  concept-template.md  deployment-template.md  planning-context-template.md  planning-state-template.json  project-context-template.md  review-template.md  security-audit-template.md  step-creation-checklist.md  step-template.md  step-validation-template.md  tech-stack-template.md  ui-design-template.md  vscode-settings.json
templates/commands/: madspec.architecture.md  madspec.concept.md  madspec.deploy.md  madspec.design.md  madspec.feature.implement.md  madspec.feature.init.md  madspec.feature.plan.md  madspec.implement.md  madspec.mvp.architecture.md  madspec.mvp.concept.md  madspec.mvp.design.md  madspec.mvp.implement.md  madspec.mvp.plan.md  madspec.mvp.tech.md  madspec.plan.md  madspec.review.md  madspec.security.md  madspec.tech.md
templates/feature/: feature-implementation-context-template.md  feature-planning-context-template.md  project-analysis-template.md
